Added decimal input field

--- a/app/src/main/res/layout/element_input_value_decimal.xml
+++ b/app/src/main/res/layout/element_input_value_decimal.xml
@@ -16,9 +16,10 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/inpudField"
+        android:id="@+id/inputField"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:inputType="numberDecimal" />
 
 </RelativeLayout>
