--- a/app/src/main/res/layout/element_input_value_number.xml
+++ b/app/src/main/res/layout/element_input_value_number.xml
@@ -6,12 +6,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Large Text"
         android:id="@+id/rowLabel"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:maxWidth="250sp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:inputType="numberDecimal" />
+        android:numeric="integer|decimal"
+        android:inputType="number" />
 
 </RelativeLayout>
