--- a/app/src/main/res/layout/fragment_monte_carlo.xml
+++ b/app/src/main/res/layout/fragment_monte_carlo.xml
@@ -19,7 +19,8 @@
 
             <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/tableInputMonte">
 
                 <TableRow
                     android:layout_width="match_parent"
