--- a/app/src/main/res/layout/fragment_monte_carlo.xml
+++ b/app/src/main/res/layout/fragment_monte_carlo.xml
@@ -188,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Пересчитать"
-                android:id="@+id/recalcute"
+                android:id="@+id/recalculateMonte"
                 android:layout_row="5"
                 android:layout_column="0"
                 android:layout_marginStart="283dp"
